# ChangeLog for app-emacs/whine
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Sep 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/whine-19880922-gentoo.patch, +files/50whine-gentoo.el,
  +metadata.xml, +whine-19880922.ebuild:
  Initial import, Emacs complaint generator by Bard Bloom. Ebuild contributed
  by me.
