@@ -1,6 +1,6 @@
 AUX 50whine-gentoo.el 286 RMD160 28531d571002c84c02229eb6cd9bf67e0aba0331 SHA1 08d3c3f1ed4e0692c95e3e5202a8edc0e5a7d3aa SHA256 2c93e9227f379c05d9b7a2f0c1f8aafacdd9cf2316c258287a9986341572eb78
-AUX whine-19880922-gentoo.patch 281 RMD160 3efcaa1dd12de1d8282226221d17f2f21cc046a7 SHA1 1ac5de4b8deed85e093ba9f5660bc296cf4756d3 SHA256 9d73dd371a6d04d2dd122bfcf1557690f2fcf00940ae50a1de41c3b466dc6978
+AUX whine-19880922-gentoo.patch 4419 RMD160 40cd9a5faaacab8ed640eaccd3cd8f637a6ba269 SHA1 0aa5dc14b9c81c3a934d4010a1b378e930c5608e SHA256 709250a4b0170e6ffe49818f51a1f00a21df29f57771a0b8363c544b5e172482
 DIST whine-19880922.el.bz2 4116 RMD160 c6f68ee23a689894bfa645be9bb1a176990c3bdc SHA1 2f6c4d9d232d31130a360e3ce539dcac968b9594 SHA256 4cf117f453d1e5d526303c5b648594a148e030b46a27ce71d05f0c6255a38dcb
 EBUILD whine-19880922.ebuild 513 RMD160 0ae7f078eb28d960bd7d01ce6c71f856cbf202cb SHA1 e5f224bb950cc51719536c097b282aaae474882b SHA256 d49eadedd270ebb2c8534b89101b4dc76b55b8cb056ca63ee054d7fe17b8bfe8
-MISC ChangeLog 356 RMD160 d6b286e26c6506ab5ac3170f18b9f495675a436c SHA1 6cb682e71e1f07f7377f30db56e1b026d3d432fe SHA256 2801b7d29f731df3bbadfb3dd79332768d1760a23812556c2bacffe6588c4847
+MISC ChangeLog 512 RMD160 7edd0facdbba8619d840c7a52852368fb8524983 SHA1 f10d09d131f3384b9c0f549e054bced04c6a292a SHA256 c66095c4e6291fc842a0defc873609fb535295f48d105bab43d79ad484ef72d6
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
