@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
+  files/whine-19880922-gentoo.patch:
+  Restore broken keybindings; hopefully this is close to the original.
+
   16 Sep 2007; Ulrich Mueller <ulm@gentoo.org>
   +files/whine-19880922-gentoo.patch, +files/50whine-gentoo.el,
   +metadata.xml, +whine-19880922.ebuild:
